@@ -2,12 +2,13 @@ package eu.rekawek.jhttp.server;
 
 import java.io.IOException;
 import java.net.Socket;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import org.junit.Test;
 
 import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class SocketHttpRequestTest {
 
@@ -24,6 +25,6 @@ public class SocketHttpRequestTest {
         final Socket socket = mock(Socket.class);
         when(socket.getInputStream()).thenReturn(
                 SocketHttpRequestTest.class.getResourceAsStream(requestFilePath));
-        return new SocketHttpRequest(socket, new PathResolver(Paths.get("/server/root")));
+        return new SocketHttpRequest(socket, new PathResolver(Path.of("/server/root")));
     }
 }
